# MIC1_Simulator

./: .gitignore  CMakeLists.txt  README.md  SUMOFN.MP  alu.cpp  alu.h  amux.cpp  amux.h  constants.h  exceptions.h  gui.cpp  gui.h  instruction.cpp  instruction.h  main.cpp  memory.cpp  memory.h  parser.cpp  parser.h  registers.cpp  registers.h  shifter.cpp  shifter.h  simulator.cpp  simulator.h  simulatorSprite.h
include/: alu.h  amux.h  exceptions.h  instruction.h  memory.h  parser.h  registers.h  simulator.h
krita/: sim.kra
programs/: program.mp  program2.mp  program3.mp
src/: instruction.cpp  main.cpp
src/lib/: alu.cpp  amux.cpp  instruction.cpp  memory.cpp  parser.cpp  registers.cpp  shifter.cpp  simulator.cpp
tests/: run_tests.h  test_parser.h  test_simulator.h
tests/include/: run_tests.h  test_alu.h  test_parser.h  test_shifter.h  test_simulator.h
tests/src/: main_test.cpp  test_alu.cpp  test_parser.cpp  test_shifter.cpp  test_simulator.cpp
